@@ -1,6 +1,8 @@
 Version 0.9.XX
     Bug Fixes:
         * #1032 - Not able to get user's email.
+        * #1040 - Cannot parse PBX project for iOS
+        * #1088 - Disable BITCODE for iOS build
     New Features:
         * #990 - Support callback for getting email address.
         * Removed dependency on Google+.
